--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -5,6 +5,7 @@
     "com.unity.collab-proxy": "1.2.16",
     "com.unity.ide.rider": "1.1.4",
     "com.unity.ide.vscode": "1.2.3",
+    "com.unity.jobs": "0.2.10-preview.13",
     "com.unity.mobile.android-logcat": "1.2.0",
     "com.unity.mobile.notifications": "1.0.3",
     "com.unity.performance.profile-analyzer": "1.0.3",
